removed api settings from app properties